# Listing files to compile
sources = files (
    'Application.vala',
    'MainWindow.vala',
    'components/VerticalBox.vala',
    'components/HeaderBar.vala',
    'components/LanguageButton.vala',
    'components/AboutButton.vala',
    'components/AboutDialog.vala',
    'screens/MainScreen.vala',
    'services/LanguageService.vala',
    'services/TesseractTrigger.vala'
)
