# Listing files to compile
sources = files (
    'Application.vala',
    'MainWindow.vala',
    'components/VerticalBox.vala',
    'components/HeaderBar.vala',
    'components/LanguageButton.vala',
    'components/AboutButton.vala',
    'components/AboutDialog.vala',
    'components/SelectPictureDialog.vala',
    'screens/MainScreen.vala',
    'screens/HomeScreen.vala',
    'screens/SelectPictureScreen.vala',
    'services/LanguageService.vala',
    'services/DetectInterfaceStyle.vala',
    'services/TesseractTrigger.vala'
)
