# Listing files to compile
sources = files (
    'Application.vala',
    'MainWindow.vala',
    'components/VerticalBox.vala',
    'components/HeaderBar.vala',
    'components/LanguageButtonPopover.vala',
    'components/AboutButton.vala',
    'components/AboutDialog.vala',
    'screens/MainScreen.vala',
    'screens/HomeScreen.vala',
    'screens/SelectPictureScreen.vala',
    'services/LanguageService.vala',
    'services/TesseractTrigger.vala'
)

# Executable
executable (
    PROJECT_RDNN_NAME,
    sources,
    as_resources,
    dependencies: dependencies,
    install: true
)
